# FastApiBasicFrame

./: .env.crypto.dev  .env.crypto.local  .env.crypto.prod  .env.dev  .env.local  .env.prod  .gitignore  README.md  docs.md  pyproject.toml  run_server.py
src/fastapibasic/: config.py  datasource.py  main.py  prometheus.py  routes.py  transform.py
tests/: conftest.py  test_main.py  test_routes.py
